 FLa4a 1.9.x:

 NEW FEATURES
- plot for residuals by age
- scas method to run several sca
- plot for multiple fits
- new classes for plural fit objects


 BUG FIXES:
- sca use of covariates fixed
- several man pages issues fixed
- ma simulation from fits fixed

 FLa4a 1.8.x:

 NEW FEATURES
- pearson and raw residuals
- method replaceZeros for stock and index objects
- mse sca now replaces zeros before calling fit

 BUG FIXES:
- problem dealing with iters that don't converged fixed. Related with 'active'.
- sca.sa fixed to be compatible with mse 2.0

 FLa4a 1.6.x:

 NEW FEATURES
- burnin for MCMC fixed to rename iters names
- Likelihood is now returned by component
- sca.sa and sep.sa functions to make sca() available to the mp function in the mse package

	BUG FIXES:
- Centering was not properly reported for MCMCM qmodels


 FLa4a 1.0.0:

 NEW FEATURES:
- ma() now takes any function to compute weights
- tests extended to check sca/a4aSCA defaults submodels
- sca and a4aSCA have the same default submodels
- wireframe for FLQuant
- plot fits vs observation improved (yaxis removed)
- new vignette for introduction
- new vignette for growth modelling
- new vignette for natural mortality modelling
- new vignette for stock assessment
- new themes for residual plots
- default model in sca changed from if (ka < 3) ka else min(max(3, floor(.5 * ka)), 6) to if (ka < 3) ka else min(max(3, floor(.66 * ka)), 10), adding more degress of freedom. It has been noticed that age tends to be modelled with a reduced number of ks. 

	BUG FIXES:
- man pages reviewed

 FLa4a 0.800.x:

	BUG FIXES:
- a4aInternal to remove files after a4a ADMB run

 FLa4a 0.700.x:

 BUG FIXES:
- a4aInternal was calling check.executable() which isn't needed and was making a mess in parallel
- sr geomean fixed, it was failing due to including par "b" in outcome while admb was not reporting.
- R~ssb was using the previous year to compute SSB, now it matches the SSB with the correct yearclass.