@@ -173,5 +173,6 @@ exportMethods(vCovar)
 exportMethods(vFrml)
 exportMethods(vmodel)
 exportMethods(vPars)
+exportMethods(window)
 exportMethods(wireframe)
 exportMethods(wt)
